@@ -46,10 +46,12 @@ test('ui.notifications.Info', 3, function() {
     ok(info.dismiss);
 });
 
-test('ui.notifications.FailingTest', 2, function() {
+test('ui.notifications.FailingTest', 4, function() {
     var failingTest = new ui.notifications.FailingTest({testName: 'test'});
     equal(failingTest.tagName, 'LI');
     equal(failingTest.innerHTML, 'test');
+    ok(failingTest.equals({testName: 'test'}));
+    ok(!failingTest.equals({testName: 'foo'}));
 });
 
 test('ui.notifications.SuspiciousCommit', 2, function() {
@@ -58,10 +60,14 @@ test('ui.notifications.SuspiciousCommit', 2, function() {
     equal(suspiciousCommit.innerHTML, '<div class="description"><a href="">1</a>title author (reviewer)</div><ul class="actions"><li><button>Roll out</button></li></ul>');
 });
 
-test('ui.notifications.TestFailures', 4, function() {
+test('ui.notifications.TestFailures', 7, function() {
     var testFailures = new ui.notifications.TestFailures();
     equal(testFailures.tagName, 'LI');
     equal(testFailures.innerHTML, '<time>Just Now</time><div class="what"><div class="problem"><ul class="effects"></ul><ul class="causes"></ul></div></div>');
+    testFailures.addFailureAnalysis({testName: 'test'});
+    equal(testFailures.innerHTML, '<time>Just Now</time><div class="what"><div class="problem"><ul class="effects"><li>test</li></ul><ul class="causes"></ul></div></div>');
+    ok(testFailures.containsFailureAnalysis({testName: 'test'}));
+    ok(!testFailures.containsFailureAnalysis({testName: 'foo'}));
     testFailures.addFailureAnalysis({testName: 'test'});
     equal(testFailures.innerHTML, '<time>Just Now</time><div class="what"><div class="problem"><ul class="effects"><li>test</li></ul><ul class="causes"></ul></div></div>');
     testFailures.addCommitData({revision: 1, title: "title", author: "author", reviewer: "reviewer"});
